InvokeNative/Native.h

void DoWithNoParameters();

int DoWithInt(int a, int b);

double DoWithDouble(double a, double b);

void DoWithIntPointer(int a, int b, int* r);

void DoWithDoublePointer(double a, double b, double* r);